--- a/porffolio.ipynb
+++ b/porffolio.ipynb
@@ -111,9 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [],
-   "source": [],
+   "execution_count": 64,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "DatetimeIndex(['2020-01-02', '2020-01-03', '2020-01-06', '2020-01-07',\n               '2020-01-08', '2020-01-09', '2020-01-10', '2020-01-13',\n               '2020-01-14', '2020-01-15',\n               ...\n               '2021-12-16', '2021-12-17', '2021-12-20', '2021-12-21',\n               '2021-12-22', '2021-12-23', '2021-12-27', '2021-12-28',\n               '2021-12-29', '2021-12-30'],\n              dtype='datetime64[ns]', name='Date', length=504, freq=None)"
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2.index"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
